--- a/src/components/ImageModal/ImageModal.css
+++ b/src/components/ImageModal/ImageModal.css
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: black;
   border-radius: 8px;
   padding: 0;
   margin: 0;
