--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,7 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -10,6 +9,15 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+}
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
