--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -11,7 +11,11 @@
   padding: 4px;
 }
 .form {
+  width: 100vh;
+  margin: 0 auto;
   display: flex;
+  justify-content: center;
+  gap: 10px;
   flex-direction: column;
   align-items: center;
 }
