--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,29 +1,19 @@
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 8px;
-  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   margin: 0 auto;
-  width: 100vw;
-  box-sizing: border-box;
-  padding-top: 70px;
+  justify-content: center;
 }
 
 .galleryItem {
-  position: relative;
-  width: 100%;
-  padding-bottom: 75%;
-  overflow: hidden;
-  border-radius: 10px;
-  background-color: #f0f0f0;
+  border-radius: 16px;
   border: 1px solid rgb(36, 36, 36);
 }
 
 .galleryItem img {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 16px;
 }
