--- a/src/components/ImageModal/ImageModal.css
+++ b/src/components/ImageModal/ImageModal.css
@@ -8,7 +8,7 @@
   padding: 0;
   margin: 0;
   max-width: 90vw;
-  max-height: 90vh;
+  /* max-height: 90vh; */
   overflow: hidden;
   z-index: 1000;
 }
