--- a/src/components/index.css
+++ b/src/components/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  width: 100vh;
+  width: 100%;
   box-sizing: border-box;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -20,7 +20,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #464646;
 }
 
 body {
@@ -28,7 +28,7 @@ body {
   display: flex;
   align-items: center;
   min-height: 100vh;
-  width: 2000px;
+  min-width: 100vh;
   background-color: rgb(109, 109, 109);
 }
 h1 {
@@ -48,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #979797;
 }
 button:focus,
 button:focus-visible {
